[project]
name = "customer-support-agent"
version = "0.1.0"
description = "AI-Powered Customer Support & Returns Automation Agent"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-ollama>=0.2.0",
  "langsmith>=0.1.0",
  "supabase>=2.0.0",
  "streamlit>=1.40.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "fpdf2>=2.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
